--- a/CLIENT/GUI/editorWindow/ui/gui_toolsbar.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_toolsbar.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>982</width>
+    <width>992</width>
     <height>70</height>
    </rect>
   </property>
@@ -40,6 +40,11 @@ QPushButton:hover:!pressed{
 QPushButton:pressed{
     border-style: inset;
 	background-color: hsv(165, 55, 220);
+}
+
+QPushButton:checked{
+    border-style: inset;
+	background-color: hsv(165, 55, 235);
 }
 
 QFontComboBox{
@@ -477,6 +482,9 @@ QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
               <iconset resource="../../images/images.qrc">
                <normaloff>:/editor/text_editor/LeftAlign.svg</normaloff>:/editor/text_editor/LeftAlign.svg</iconset>
              </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
            <item>
@@ -490,6 +498,9 @@ QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
              <property name="icon">
               <iconset resource="../../images/images.qrc">
                <normaloff>:/editor/text_editor/CentralAlign.svg</normaloff>:/editor/text_editor/CentralAlign.svg</iconset>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -505,6 +516,9 @@ QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
               <iconset resource="../../images/images.qrc">
                <normaloff>:/editor/text_editor/RightAlign.svg</normaloff>:/editor/text_editor/RightAlign.svg</iconset>
              </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
            <item>
@@ -518,6 +532,9 @@ QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
              <property name="icon">
               <iconset resource="../../images/images.qrc">
                <normaloff>:/editor/text_editor/JustifiedAlign.svg</normaloff>:/editor/text_editor/JustifiedAlign.svg</iconset>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -665,6 +682,9 @@ QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
               <iconset resource="../../images/images.qrc">
                <normaloff>:/editor/text_editor/Italic.svg</normaloff>:/editor/text_editor/Italic.svg</iconset>
              </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
            <item>
@@ -678,6 +698,9 @@ QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
              <property name="icon">
               <iconset resource="../../images/images.qrc">
                <normaloff>:/editor/text_editor/Bold.svg</normaloff>:/editor/text_editor/Bold.svg</iconset>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -693,6 +716,9 @@ QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
               <iconset resource="../../images/images.qrc">
                <normaloff>:/editor/text_editor/Underlined.svg</normaloff>:/editor/text_editor/Underlined.svg</iconset>
              </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
            <item>
@@ -706,6 +732,9 @@ QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
              <property name="icon">
               <iconset resource="../../images/images.qrc">
                <normaloff>:/editor/text_editor/StrikeThrough.svg</normaloff>:/editor/text_editor/StrikeThrough.svg</iconset>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
