--- a/CLIENT/GUI/editorWindow/ui/gui_editorwindow.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_editorwindow.ui
@@ -123,7 +123,7 @@
   </action>
   <action name="actionLeft">
    <property name="checkable">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="text">
     <string>Left</string>
@@ -131,7 +131,7 @@
   </action>
   <action name="actionCenter">
    <property name="checkable">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="text">
     <string>Center</string>
@@ -139,13 +139,16 @@
   </action>
   <action name="actionRight">
    <property name="checkable">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="text">
     <string>Right</string>
    </property>
   </action>
   <action name="actionJustified">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Justified</string>
    </property>
